# goto

./: .claude_state.json  .gitignore  .mise.toml  AGENTS.md  Cargo.toml  README.md  ROADMAP.md  go.mod  goto-bin  goto-go-specification.md  mise.toml
.github/workflows/: release.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
chunks/: VERIFICATION_REPORT.md  chunk_18.md  chunk_19.md  chunk_20.md  chunk_21.md  chunk_22.md  chunk_23.md  chunk_24.md  chunk_25.md  chunk_26.md  chunk_27.md
cmd/goto/: main.go
docs/: commands.md  configuration.md  installation.md  shell-integration.md
internal/alias/: alias.go  alias_test.go
internal/commands/: commands.go  commands_test.go
internal/config/: config.go  config_test.go
internal/database/: database.go  database_test.go
internal/fuzzy/: fuzzy.go  fuzzy_test.go
internal/stack/: stack.go  stack_test.go
shell/: goto.bash  goto.fish  goto.zsh
src/: alias.rs  cli.rs  config.rs  database.rs  fuzzy.rs  help.rs  lib.rs  main.rs  stack.rs  table.rs
src/commands/: cleanup.rs  config.rs  import_export.rs  install.rs  list.rs  mod.rs  navigate.rs  prune.rs  register.rs  stack.rs  stats.rs  tags.rs  update.rs
test/integration/: helpers.go  integration_test.go
tests/: fzf_integration.bats  install_bin_dir.bats  install_dry_run.bats  install_errors.bats  install_shell_flags.bats  integration.rs  uninstall_dry_run.bats  uninstall_preservation.bats
