[package]
name = "goto"
version = "1.1.0"
edition = "2021"
description = "Navigate to aliased directories with autocomplete support"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
thiserror = "1.0"
regex = "1.10"
shellexpand = "3.1"

[dev-dependencies]
tempfile = "3.14"

[[bin]]
name = "goto-bin"
path = "src/main.rs"

[[test]]
name = "integration"
path = "tests/integration.rs"
